network-policies/allow-egress-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-dns
spec:
  policyTypes:
  - Egress
  egress:
    - ports:
      - port: 53
        protocol: TCP
      - port: 53
        protocol: UDP
